// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot: GET /dto/attempts/:attemptId (student reads own APPROVED attempt) matches snapshot 1`] = `
{
  "arrivalAirport": "EFHK",
  "attemptId": "f0000000-0000-0000-0000-000000000001",
  "blockTime": "02:10",
  "createdAt": Any<String>,
  "departureAirport": "EFHK",
  "flightDate": "2026-01-10",
  "flightLogId": "dtoj1f01a",
  "flightTime": "01:50",
  "instructorComments": "Good first lesson. Lookout needs improvement but acceptable.",
  "instructorMemberId": "Jukka1",
  "itemOutcomes": [
    {
      "attemptId": "f0000000-0000-0000-0000-000000000001",
      "createdAt": Any<String>,
      "itemId": "d0000000-0000-0000-0000-000000000001",
      "outcome": "COMPLETED",
      "remarks": null,
      "updatedAt": Any<String>,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000001",
      "createdAt": Any<String>,
      "itemId": "d0000000-0000-0000-0000-000000000002",
      "outcome": "COMPLETED",
      "remarks": null,
      "updatedAt": Any<String>,
    },
  ],
  "landingTimeUtc": "2026-01-10T12:00:00.000Z",
  "memberSyllabusId": "e0000000-0000-0000-0000-000000000001",
  "numberOfLandings": 1,
  "offBlockTimeUtc": "2026-01-10T10:00:00.000Z",
  "onBlockTimeUtc": "2026-01-10T12:10:00.000Z",
  "requiresReverification": false,
  "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
  "takeoffTimeUtc": "2026-01-10T10:10:00.000Z",
  "updatedAt": Any<String>,
  "verificationResult": "APPROVED",
  "verifiedAt": Any<String>,
  "verifiedBy": "Jukka1",
  "verifierName": "Jukka Nieminen",
}
`;

exports[`Snapshot: GET /dto/member-syllabus/:id/attempts (student reads own attempt list) matches snapshot 1`] = `
[
  {
    "attemptId": "f0000000-0000-0000-0000-000000000001",
    "createdAt": Any<String>,
    "flightLogId": "dtoj1f01a",
    "instructorComments": "Good first lesson. Lookout needs improvement but acceptable.",
    "instructorMemberId": "Jukka1",
    "memberSyllabusId": "e0000000-0000-0000-0000-000000000001",
    "requiresReverification": false,
    "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
    "updatedAt": Any<String>,
    "verificationResult": "APPROVED",
    "verifiedAt": Any<String>,
    "verifiedBy": "Jukka1",
    "verifierName": null,
  },
  {
    "attemptId": "f0000000-0000-0000-0000-000000000002",
    "createdAt": Any<String>,
    "flightLogId": "dtoj1f02a",
    "instructorComments": "Circuit shape improving. Short-field technique deferred to HIL for extra practice.",
    "instructorMemberId": "Jukka1",
    "memberSyllabusId": "e0000000-0000-0000-0000-000000000001",
    "requiresReverification": false,
    "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
    "updatedAt": Any<String>,
    "verificationResult": "APPROVED",
    "verifiedAt": Any<String>,
    "verifiedBy": "Jukka1",
    "verifierName": null,
  },
  {
    "attemptId": "f0000000-0000-0000-0000-000000000003",
    "createdAt": Any<String>,
    "flightLogId": "dtoj1f03a",
    "instructorComments": null,
    "instructorMemberId": "Jukka1",
    "memberSyllabusId": "e0000000-0000-0000-0000-000000000001",
    "requiresReverification": false,
    "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
    "updatedAt": Any<String>,
    "verificationResult": null,
    "verifiedAt": Any<String>,
    "verifiedBy": null,
    "verifierName": null,
  },
]
`;

exports[`Snapshot: GET /dto/member-syllabus/:id/detail (instructor reads student progress) matches snapshot for Matti1 1`] = `
{
  "attemptsWithOutcomes": [
    {
      "attemptId": "f0000000-0000-0000-0000-000000000004",
      "blockTime": "02:10",
      "createdAt": Any<String>,
      "flightDate": "2026-01-10",
      "flightLogId": "dtom1f01a",
      "flightTime": "01:50",
      "instructorComments": "Excellent control handling for first lesson.",
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [
        {
          "attemptId": "f0000000-0000-0000-0000-000000000004",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000001",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
        {
          "attemptId": "f0000000-0000-0000-0000-000000000004",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000002",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
      ],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-01-10T15:00:00.000Z",
      "onBlockTimeUtc": "2026-01-10T17:10:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
      "updatedAt": Any<String>,
      "verificationResult": "APPROVED",
      "verifiedAt": Any<String>,
      "verifiedBy": "Jukka1",
      "verifierName": null,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000005",
      "blockTime": "02:10",
      "createdAt": Any<String>,
      "flightDate": "2026-01-12",
      "flightLogId": "dtom1f02a",
      "flightTime": "01:50",
      "instructorComments": "Consistent circuits. Excellent short-field technique.",
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [
        {
          "attemptId": "f0000000-0000-0000-0000-000000000005",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000003",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
        {
          "attemptId": "f0000000-0000-0000-0000-000000000005",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000004",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
      ],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-01-12T10:00:00.000Z",
      "onBlockTimeUtc": "2026-01-12T12:10:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
      "updatedAt": Any<String>,
      "verificationResult": "APPROVED",
      "verifiedAt": Any<String>,
      "verifiedBy": "Jukka1",
      "verifierName": null,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000006",
      "blockTime": "03:30",
      "createdAt": Any<String>,
      "flightDate": "2026-01-19",
      "flightLogId": "dtom1f03a",
      "flightTime": "03:10",
      "instructorComments": "Good map reading. Radio navigation technique needs more practice – moved to HIL.",
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [
        {
          "attemptId": "f0000000-0000-0000-0000-000000000006",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000005",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
        {
          "attemptId": "f0000000-0000-0000-0000-000000000006",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000006",
          "outcome": "MOVED_TO_HIL",
          "remarks": "Requires further radio navigation practice.",
          "updatedAt": Any<String>,
        },
      ],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-01-19T10:00:00.000Z",
      "onBlockTimeUtc": "2026-01-19T13:30:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
      "updatedAt": Any<String>,
      "verificationResult": "APPROVED",
      "verifiedAt": Any<String>,
      "verifiedBy": "Jukka1",
      "verifierName": null,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000007",
      "blockTime": "02:10",
      "createdAt": Any<String>,
      "flightDate": "2026-01-26",
      "flightLogId": "dtom1f04a",
      "flightTime": "01:50",
      "instructorComments": "Excellent handling of all emergencies. Clear mayday call.",
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [
        {
          "attemptId": "f0000000-0000-0000-0000-000000000007",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000007",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
        {
          "attemptId": "f0000000-0000-0000-0000-000000000007",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000008",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
      ],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-01-26T10:00:00.000Z",
      "onBlockTimeUtc": "2026-01-26T12:10:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000004",
      "updatedAt": Any<String>,
      "verificationResult": "APPROVED",
      "verifiedAt": Any<String>,
      "verifiedBy": "Jukka1",
      "verifierName": null,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000008",
      "blockTime": "02:10",
      "createdAt": Any<String>,
      "flightDate": "2026-02-02",
      "flightLogId": "dtom1fvta",
      "flightTime": "01:50",
      "instructorComments": "Interim checkpoint PASSED. Matti demonstrates sound judgement and good airmanship.",
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [
        {
          "attemptId": "f0000000-0000-0000-0000-000000000008",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000009",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
        {
          "attemptId": "f0000000-0000-0000-0000-000000000008",
          "createdAt": Any<String>,
          "itemId": "d0000000-0000-0000-0000-000000000010",
          "outcome": "COMPLETED",
          "remarks": null,
          "updatedAt": Any<String>,
        },
      ],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-02-02T10:00:00.000Z",
      "onBlockTimeUtc": "2026-02-02T12:10:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000005",
      "updatedAt": Any<String>,
      "verificationResult": "APPROVED",
      "verifiedAt": Any<String>,
      "verifiedBy": "Jukka1",
      "verifierName": null,
    },
    {
      "attemptId": "f0000000-0000-0000-0000-000000000009",
      "blockTime": "05:50",
      "createdAt": Any<String>,
      "flightDate": "2026-02-14",
      "flightLogId": "dtom1f05a",
      "flightTime": "05:30",
      "instructorComments": null,
      "instructorMemberId": "Jukka1",
      "itemOutcomes": [],
      "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
      "offBlockTimeUtc": "2026-02-14T10:00:00.000Z",
      "onBlockTimeUtc": "2026-02-14T15:50:00.000Z",
      "requiresReverification": false,
      "syllabusFlightId": "c0000000-0000-0000-0000-000000000006",
      "updatedAt": Any<String>,
      "verificationResult": null,
      "verifiedAt": Any<String>,
      "verifiedBy": null,
      "verifierName": null,
    },
  ],
  "hilItems": [
    {
      "hilId": "10000000-0000-0000-0000-000000000002",
      "itemId": "d0000000-0000-0000-0000-000000000006",
      "memberId": "Matti1",
      "notes": "Additional VOR tracking exercises recommended before solo XC.",
      "openedAt": "2026-01-19T15:30:00.000Z",
      "openedOnAttemptId": "f0000000-0000-0000-0000-000000000006",
      "resolutionOutcome": null,
      "resolvedAt": null,
      "resolvedOnAttemptId": null,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
    },
  ],
  "memberSyllabus": {
    "assignedAt": Any<String>,
    "assignedBy": "Liisa1",
    "deactivatedAt": null,
    "isActive": true,
    "memberId": "Matti1",
    "memberName": "Matti Virtanen",
    "memberSyllabusId": "e0000000-0000-0000-0000-000000000002",
    "syllabusDetail": {
      "approvalReference": null,
      "createdAt": Any<String>,
      "createdBy": "Liisa1",
      "description": "Full PPL(A) syllabus following EASA DTO requirements. Mobile-friendly field reference.",
      "descriptionHtml": "<p>Full PPL(A) syllabus following EASA DTO requirements. Mobile-friendly field reference.</p>
",
      "flights": [
        {
          "code": "01",
          "createdAt": Any<String>,
          "description": "Straight & level flight, turns, climbs and descents. Introduction to aircraft controls.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000001",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "360° co-ordinated turns at 45° bank angle.",
              "itemId": "d0000000-0000-0000-0000-000000000001",
              "mandatory": true,
              "name": "Steep turns",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
            },
            {
              "description": "Systematic visual scan; HASELL checks before manoeuvres.",
              "itemId": "d0000000-0000-0000-0000-000000000002",
              "mandatory": true,
              "name": "Lookout technique",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
            },
          ],
          "name": "Basic Handling",
          "recommendedBlockTimeMins": 60,
          "sortOrder": 1,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [],
          "updatedAt": Any<String>,
        },
        {
          "code": "02",
          "createdAt": Any<String>,
          "description": "Normal circuit, stabilised approach, touch & go. Short-field and soft-field techniques.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000002",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Consistent circuit geometry, speed management, stabilised approach.",
              "itemId": "d0000000-0000-0000-0000-000000000003",
              "mandatory": true,
              "name": "Normal circuit",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
            },
            {
              "description": "Touch-down on a nominated point; minimum landing roll.",
              "itemId": "d0000000-0000-0000-0000-000000000004",
              "mandatory": false,
              "name": "Short-field landing",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
            },
          ],
          "name": "Circuit Training",
          "recommendedBlockTimeMins": 90,
          "sortOrder": 2,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [],
          "updatedAt": Any<String>,
        },
        {
          "code": "03",
          "createdAt": Any<String>,
          "description": "VFR cross-country navigation using map reading and radio navigation aids.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000003",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Identify landmarks, maintain planned track ±5 NM.",
              "itemId": "d0000000-0000-0000-0000-000000000005",
              "mandatory": true,
              "name": "Map reading",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
            },
            {
              "description": "Use VOR / NDB for track confirmation and position fixing.",
              "itemId": "d0000000-0000-0000-0000-000000000006",
              "mandatory": true,
              "name": "Radio navigation",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
            },
          ],
          "name": "Navigation",
          "recommendedBlockTimeMins": 120,
          "sortOrder": 3,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [
            "XC",
          ],
          "updatedAt": Any<String>,
        },
        {
          "code": "04",
          "createdAt": Any<String>,
          "description": "Simulated engine failures, forced landings, fire drills and emergency communications.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000004",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Correct handling: mayday call, best glide, field selection.",
              "itemId": "d0000000-0000-0000-0000-000000000007",
              "mandatory": true,
              "name": "Engine failure simulation",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000004",
            },
            {
              "description": "Plan and execute a forced landing to a suitable field.",
              "itemId": "d0000000-0000-0000-0000-000000000008",
              "mandatory": true,
              "name": "Forced landing",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000004",
            },
          ],
          "name": "Emergency Procedures",
          "recommendedBlockTimeMins": 60,
          "sortOrder": 4,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [],
          "updatedAt": Any<String>,
        },
        {
          "code": "VT",
          "createdAt": Any<String>,
          "description": "Interim checkpoint assessment covering all skills acquired to date.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000005",
          "flightType": null,
          "isInterimCheckpoint": true,
          "items": [
            {
              "description": "Demonstrate sound aeronautical decision making under stress.",
              "itemId": "d0000000-0000-0000-0000-000000000009",
              "mandatory": true,
              "name": "Decision making",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000005",
            },
            {
              "description": "Effective resource management during simulated emergency.",
              "itemId": "d0000000-0000-0000-0000-000000000010",
              "mandatory": true,
              "name": "CRM fundamentals",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000005",
            },
          ],
          "name": "Välitarkastuslento",
          "recommendedBlockTimeMins": 60,
          "sortOrder": 5,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [],
          "updatedAt": Any<String>,
        },
        {
          "code": "05",
          "createdAt": Any<String>,
          "description": "First solo cross-country flight with at least one full-stop landing away from home base.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000006",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Complete nav log, fuel check, NOTAM & weather briefing.",
              "itemId": "d0000000-0000-0000-0000-000000000011",
              "mandatory": true,
              "name": "Flight planning",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000006",
            },
            {
              "description": "In-flight fuel monitoring and management.",
              "itemId": "d0000000-0000-0000-0000-000000000012",
              "mandatory": true,
              "name": "Fuel management",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000006",
            },
          ],
          "name": "Solo Cross-Country",
          "recommendedBlockTimeMins": 150,
          "sortOrder": 6,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [
            "SOLO",
            "XC",
          ],
          "updatedAt": Any<String>,
        },
        {
          "code": "06",
          "createdAt": Any<String>,
          "description": "Night circuits, night cross-country and night approach procedures.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000007",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Maintain circuit geometry using cockpit lighting only.",
              "itemId": "d0000000-0000-0000-0000-000000000013",
              "mandatory": true,
              "name": "Night circuit",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000007",
            },
            {
              "description": "Stabilised approach and landing by reference to runway lighting.",
              "itemId": "d0000000-0000-0000-0000-000000000014",
              "mandatory": true,
              "name": "Night approach & landing",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000007",
            },
          ],
          "name": "Night Flying",
          "recommendedBlockTimeMins": 90,
          "sortOrder": 7,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [
            "NIGHT",
          ],
          "updatedAt": Any<String>,
        },
        {
          "code": "07",
          "createdAt": Any<String>,
          "description": "Spin awareness, recovery from unusual attitudes, steep turns.",
          "easaFclReference": null,
          "flightId": "c0000000-0000-0000-0000-000000000008",
          "flightType": null,
          "isInterimCheckpoint": false,
          "items": [
            {
              "description": "Correct entry recognition and recovery using PARE.",
              "itemId": "d0000000-0000-0000-0000-000000000015",
              "mandatory": true,
              "name": "Spin awareness",
              "sortOrder": 1,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000008",
            },
            {
              "description": "Recovery from nose-high and nose-low unusual attitudes.",
              "itemId": "d0000000-0000-0000-0000-000000000016",
              "mandatory": false,
              "name": "Unusual attitude recovery",
              "sortOrder": 2,
              "syllabusFlightId": "c0000000-0000-0000-0000-000000000008",
            },
          ],
          "name": "Advanced Manoeuvres",
          "recommendedBlockTimeMins": 60,
          "sortOrder": 8,
          "syllabusId": "b0000000-0000-0000-0000-000000000001",
          "tags": [],
          "updatedAt": Any<String>,
        },
      ],
      "generalInformation": null,
      "generalInformationHtml": null,
      "majorVersion": 1,
      "minBlockTimeMins": 2700,
      "minorVersion": 0,
      "patchVersion": 0,
      "programId": "a0000000-0000-0000-0000-000000000001",
      "publishedAt": Any<String>,
      "requirementsExperienceCredit": null,
      "requirementsExperienceCreditHtml": null,
      "status": "PUBLISHED",
      "submittedForApprovalAt": Any<String>,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "updatedAt": Any<String>,
      "updatedBy": "Liisa1",
      "version": "1.0.0",
    },
    "syllabusId": "b0000000-0000-0000-0000-000000000001",
  },
}
`;

exports[`Snapshot: GET /dto/syllabi/:syllabusId (syllabus shape with time fields) matches snapshot for published syllabus 1`] = `
{
  "approvalReference": null,
  "createdAt": Any<String>,
  "createdBy": "Liisa1",
  "description": "Full PPL(A) syllabus following EASA DTO requirements. Mobile-friendly field reference.",
  "descriptionHtml": "<p>Full PPL(A) syllabus following EASA DTO requirements. Mobile-friendly field reference.</p>
",
  "flights": [
    {
      "code": "01",
      "createdAt": Any<String>,
      "description": "Straight & level flight, turns, climbs and descents. Introduction to aircraft controls.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000001",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "360° co-ordinated turns at 45° bank angle.",
          "itemId": "d0000000-0000-0000-0000-000000000001",
          "mandatory": true,
          "name": "Steep turns",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
        },
        {
          "description": "Systematic visual scan; HASELL checks before manoeuvres.",
          "itemId": "d0000000-0000-0000-0000-000000000002",
          "mandatory": true,
          "name": "Lookout technique",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000001",
        },
      ],
      "name": "Basic Handling",
      "recommendedBlockTimeMins": 60,
      "sortOrder": 1,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [],
      "updatedAt": Any<String>,
    },
    {
      "code": "02",
      "createdAt": Any<String>,
      "description": "Normal circuit, stabilised approach, touch & go. Short-field and soft-field techniques.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000002",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Consistent circuit geometry, speed management, stabilised approach.",
          "itemId": "d0000000-0000-0000-0000-000000000003",
          "mandatory": true,
          "name": "Normal circuit",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
        },
        {
          "description": "Touch-down on a nominated point; minimum landing roll.",
          "itemId": "d0000000-0000-0000-0000-000000000004",
          "mandatory": false,
          "name": "Short-field landing",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000002",
        },
      ],
      "name": "Circuit Training",
      "recommendedBlockTimeMins": 90,
      "sortOrder": 2,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [],
      "updatedAt": Any<String>,
    },
    {
      "code": "03",
      "createdAt": Any<String>,
      "description": "VFR cross-country navigation using map reading and radio navigation aids.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000003",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Identify landmarks, maintain planned track ±5 NM.",
          "itemId": "d0000000-0000-0000-0000-000000000005",
          "mandatory": true,
          "name": "Map reading",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
        },
        {
          "description": "Use VOR / NDB for track confirmation and position fixing.",
          "itemId": "d0000000-0000-0000-0000-000000000006",
          "mandatory": true,
          "name": "Radio navigation",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000003",
        },
      ],
      "name": "Navigation",
      "recommendedBlockTimeMins": 120,
      "sortOrder": 3,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [
        "XC",
      ],
      "updatedAt": Any<String>,
    },
    {
      "code": "04",
      "createdAt": Any<String>,
      "description": "Simulated engine failures, forced landings, fire drills and emergency communications.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000004",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Correct handling: mayday call, best glide, field selection.",
          "itemId": "d0000000-0000-0000-0000-000000000007",
          "mandatory": true,
          "name": "Engine failure simulation",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000004",
        },
        {
          "description": "Plan and execute a forced landing to a suitable field.",
          "itemId": "d0000000-0000-0000-0000-000000000008",
          "mandatory": true,
          "name": "Forced landing",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000004",
        },
      ],
      "name": "Emergency Procedures",
      "recommendedBlockTimeMins": 60,
      "sortOrder": 4,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [],
      "updatedAt": Any<String>,
    },
    {
      "code": "VT",
      "createdAt": Any<String>,
      "description": "Interim checkpoint assessment covering all skills acquired to date.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000005",
      "flightType": null,
      "isInterimCheckpoint": true,
      "items": [
        {
          "description": "Demonstrate sound aeronautical decision making under stress.",
          "itemId": "d0000000-0000-0000-0000-000000000009",
          "mandatory": true,
          "name": "Decision making",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000005",
        },
        {
          "description": "Effective resource management during simulated emergency.",
          "itemId": "d0000000-0000-0000-0000-000000000010",
          "mandatory": true,
          "name": "CRM fundamentals",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000005",
        },
      ],
      "name": "Välitarkastuslento",
      "recommendedBlockTimeMins": 60,
      "sortOrder": 5,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [],
      "updatedAt": Any<String>,
    },
    {
      "code": "05",
      "createdAt": Any<String>,
      "description": "First solo cross-country flight with at least one full-stop landing away from home base.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000006",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Complete nav log, fuel check, NOTAM & weather briefing.",
          "itemId": "d0000000-0000-0000-0000-000000000011",
          "mandatory": true,
          "name": "Flight planning",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000006",
        },
        {
          "description": "In-flight fuel monitoring and management.",
          "itemId": "d0000000-0000-0000-0000-000000000012",
          "mandatory": true,
          "name": "Fuel management",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000006",
        },
      ],
      "name": "Solo Cross-Country",
      "recommendedBlockTimeMins": 150,
      "sortOrder": 6,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [
        "SOLO",
        "XC",
      ],
      "updatedAt": Any<String>,
    },
    {
      "code": "06",
      "createdAt": Any<String>,
      "description": "Night circuits, night cross-country and night approach procedures.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000007",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Maintain circuit geometry using cockpit lighting only.",
          "itemId": "d0000000-0000-0000-0000-000000000013",
          "mandatory": true,
          "name": "Night circuit",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000007",
        },
        {
          "description": "Stabilised approach and landing by reference to runway lighting.",
          "itemId": "d0000000-0000-0000-0000-000000000014",
          "mandatory": true,
          "name": "Night approach & landing",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000007",
        },
      ],
      "name": "Night Flying",
      "recommendedBlockTimeMins": 90,
      "sortOrder": 7,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [
        "NIGHT",
      ],
      "updatedAt": Any<String>,
    },
    {
      "code": "07",
      "createdAt": Any<String>,
      "description": "Spin awareness, recovery from unusual attitudes, steep turns.",
      "easaFclReference": null,
      "flightId": "c0000000-0000-0000-0000-000000000008",
      "flightType": null,
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Correct entry recognition and recovery using PARE.",
          "itemId": "d0000000-0000-0000-0000-000000000015",
          "mandatory": true,
          "name": "Spin awareness",
          "sortOrder": 1,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000008",
        },
        {
          "description": "Recovery from nose-high and nose-low unusual attitudes.",
          "itemId": "d0000000-0000-0000-0000-000000000016",
          "mandatory": false,
          "name": "Unusual attitude recovery",
          "sortOrder": 2,
          "syllabusFlightId": "c0000000-0000-0000-0000-000000000008",
        },
      ],
      "name": "Advanced Manoeuvres",
      "recommendedBlockTimeMins": 60,
      "sortOrder": 8,
      "syllabusId": "b0000000-0000-0000-0000-000000000001",
      "tags": [],
      "updatedAt": Any<String>,
    },
  ],
  "generalInformation": null,
  "generalInformationHtml": null,
  "majorVersion": 1,
  "minBlockTimeMins": 2700,
  "minorVersion": 0,
  "patchVersion": 0,
  "programId": "a0000000-0000-0000-0000-000000000001",
  "publishedAt": Any<String>,
  "requirementsExperienceCredit": null,
  "requirementsExperienceCreditHtml": null,
  "status": "PUBLISHED",
  "submittedForApprovalAt": Any<String>,
  "syllabusId": "b0000000-0000-0000-0000-000000000001",
  "updatedAt": Any<String>,
  "updatedBy": "Liisa1",
  "version": "1.0.0",
}
`;

exports[`Snapshot: GET /dto/syllabi/:syllabusId/export (admin export shape) matches snapshot 1`] = `
{
  "description": "Full PPL(A) syllabus following EASA DTO requirements. Mobile-friendly field reference.",
  "flights": [
    {
      "code": "01",
      "description": "Straight & level flight, turns, climbs and descents. Introduction to aircraft controls.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "360° co-ordinated turns at 45° bank angle.",
          "mandatory": true,
          "name": "Steep turns",
        },
        {
          "description": "Systematic visual scan; HASELL checks before manoeuvres.",
          "mandatory": true,
          "name": "Lookout technique",
        },
      ],
      "name": "Basic Handling",
      "recommendedBlockTimeMins": 60,
      "tags": [],
    },
    {
      "code": "02",
      "description": "Normal circuit, stabilised approach, touch & go. Short-field and soft-field techniques.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Consistent circuit geometry, speed management, stabilised approach.",
          "mandatory": true,
          "name": "Normal circuit",
        },
        {
          "description": "Touch-down on a nominated point; minimum landing roll.",
          "mandatory": false,
          "name": "Short-field landing",
        },
      ],
      "name": "Circuit Training",
      "recommendedBlockTimeMins": 90,
      "tags": [],
    },
    {
      "code": "03",
      "description": "VFR cross-country navigation using map reading and radio navigation aids.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Identify landmarks, maintain planned track ±5 NM.",
          "mandatory": true,
          "name": "Map reading",
        },
        {
          "description": "Use VOR / NDB for track confirmation and position fixing.",
          "mandatory": true,
          "name": "Radio navigation",
        },
      ],
      "name": "Navigation",
      "recommendedBlockTimeMins": 120,
      "tags": [
        "XC",
      ],
    },
    {
      "code": "04",
      "description": "Simulated engine failures, forced landings, fire drills and emergency communications.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Correct handling: mayday call, best glide, field selection.",
          "mandatory": true,
          "name": "Engine failure simulation",
        },
        {
          "description": "Plan and execute a forced landing to a suitable field.",
          "mandatory": true,
          "name": "Forced landing",
        },
      ],
      "name": "Emergency Procedures",
      "recommendedBlockTimeMins": 60,
      "tags": [],
    },
    {
      "code": "VT",
      "description": "Interim checkpoint assessment covering all skills acquired to date.",
      "isInterimCheckpoint": true,
      "items": [
        {
          "description": "Demonstrate sound aeronautical decision making under stress.",
          "mandatory": true,
          "name": "Decision making",
        },
        {
          "description": "Effective resource management during simulated emergency.",
          "mandatory": true,
          "name": "CRM fundamentals",
        },
      ],
      "name": "Välitarkastuslento",
      "recommendedBlockTimeMins": 60,
      "tags": [],
    },
    {
      "code": "05",
      "description": "First solo cross-country flight with at least one full-stop landing away from home base.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Complete nav log, fuel check, NOTAM & weather briefing.",
          "mandatory": true,
          "name": "Flight planning",
        },
        {
          "description": "In-flight fuel monitoring and management.",
          "mandatory": true,
          "name": "Fuel management",
        },
      ],
      "name": "Solo Cross-Country",
      "recommendedBlockTimeMins": 150,
      "tags": [
        "SOLO",
        "XC",
      ],
    },
    {
      "code": "06",
      "description": "Night circuits, night cross-country and night approach procedures.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Maintain circuit geometry using cockpit lighting only.",
          "mandatory": true,
          "name": "Night circuit",
        },
        {
          "description": "Stabilised approach and landing by reference to runway lighting.",
          "mandatory": true,
          "name": "Night approach & landing",
        },
      ],
      "name": "Night Flying",
      "recommendedBlockTimeMins": 90,
      "tags": [
        "NIGHT",
      ],
    },
    {
      "code": "07",
      "description": "Spin awareness, recovery from unusual attitudes, steep turns.",
      "isInterimCheckpoint": false,
      "items": [
        {
          "description": "Correct entry recognition and recovery using PARE.",
          "mandatory": true,
          "name": "Spin awareness",
        },
        {
          "description": "Recovery from nose-high and nose-low unusual attitudes.",
          "mandatory": false,
          "name": "Unusual attitude recovery",
        },
      ],
      "name": "Advanced Manoeuvres",
      "recommendedBlockTimeMins": 60,
      "tags": [],
    },
  ],
  "minBlockTimeMins": 2700,
  "title": "PPL(A) DTO Training",
  "version": "1.0.0",
}
`;
